# exercises-chapter-6

./: exercises_chapter_6.ipynb  pyproject.toml
nonlinear_solvers/: __init__.py  solvers.py
