[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chapter-6"
version = "0.1"
dependencies = ["numpy", "python", "pytest"]

[tool.hatch.build.targets.wheel]
packages = ["nonlinear_solvers"]

#### https://github.com/object-oriented-python/object-oriented-programming/blob/master/pyproject.toml
[project.optional-dependencies]
all = [
    "flake8",
    "pep8-naming",
    "flake8-docstrings",
    "pytest",
    "pandas",
    "ipdb",
    "debugpy",
]
